--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "framer-motion": "^12.23.1",
     "hls.js": "^1.6.7",
     "next": "15.3.4",
     "react": "^19.0.0",
